--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -53,7 +53,7 @@ csasdown::csas_table(d,
 Benchmarks based on spawner-recruit relationships are unreliable if there is uncertainty in the spawner and recruit data. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks). Previous work on developing WSP benchmarks for Inner South Coast Chum has shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low [@holtEvaluatingBenchmarksBiological2018]. In other cases, percentile benchmarks may be inappropriate due to low productivity, high harvest, and because they do not account for non-stationarity in recruitment dynamics [@holtEvaluatingBenchmarksBiological2018].
 
 
-We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multi-dimensional status assessment to determine the status of component CUs. For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). 
+We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multi-dimensional status assessment to determine the status of component CUs. For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review). 
 
 ## DATA
 
@@ -74,7 +74,7 @@ For this case study, we consider two approaches for characterizing CU status:
 (2) CU-level abundance relative to a percentile lower benchmark
 
 
-The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review)^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review] as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
+The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt *et al.* (in review)^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review] as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
 
 
 When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
@@ -290,7 +290,7 @@ This case study had unique characteristics that can inform the development of gu
 This case study highlighted requirements and limitations of percentile benchmarks on data-limited CUs. Shifting baselines are one of the challenges of applying this method. If abundance has decreased over time, the resulting percentile benchmark will also decrease as more data is included (Figure \@ref(fig:chum-perc-retro)). This can arise from a decrease in abundance in the period of data or by an unrecorded high level of abundance before the period of data followed by a decrease before data are available. Thus, a CU with low abundance could be green status based on the current benchmark, but would be red using a benchmark with data before decreases in abundance. The result is an overly optimistic view of current status that does not reflect the reality of long-term declines. Two CUs (Southern Coastal Streams and Upper Knight) showed evidence of shifting baselines as abundances decreased over the last several decades (Figure \@ref(fig:chum-perc-retro)). Decreasing productivity can exacerbate this pattern. As productivity decreases, a larger abundance of spawners would be required to produce the same number of recruits. Experts should thoroughly review historical abundance data and determine where shifting baselines may be occurring, and can adjust benchmarks accordingly. In some cases it may be appropriate to choose benchmarks based on historical data or information prior to declines to avoid shifting baselines [@holtCautionsUsingPercentilebased2015]. Thus, while they are useful for CUs that lack reliable stock-recruit information, they cannot be used universally on data-limited stocks. 
 
 
-Existing guidelines and cautions should be incorporated into any LRP analysis using percentile benchmarks. We followed guidelines from @holtEvaluatingBenchmarksBiological2018 and did not use percentile benchmarks for CUs with low productivity and high exploitation rate (Tables \@ref(tab:CU-summary), \@ref(tab:holt-tab6)). In their simulation study, percentile-based benchmarks overestimated status with harvest rates >40% and $\alpha$ <4, or harvest rates 20-40% and $\alpha$ <2.5. In these cases of low productivity and high harvest rates, more exploration could be done on alternative benchmarks. These could include benchmarks based on Traditional Ecological Knowledge, habitat availability, or other information. If productivity and/or harvest is unknown, low contrast in escapement time-series could be indicators of cases where percentile benchmarks may not be appropriate [@holtEvaluatingBenchmarksBiological2018]. We also note that cases with identical lower and upper benchmarks carry the risk of moving immediately from green to red status with time in the amber status zone (North East Vancouver Island, Upper Knight, Loughborough; Table \@ref(tab"CU-summary")). CUs with shorter time series also have the risk of unreliable percentile benchmarks. Those using percentile benchmarks should also consider whether they are calculated using a percentile of spawning escapement or total recruits including harvest. In the case where percentile benchmarks are used in the Salmon Scanner, if they are within the recommended guidelines, using them is preferred over relying solely on trends to assess CU status. Confidence intervals for percentile benchmarks can also be bootstrapped if desired [Peacock 2020, Holt et al. 2018]. 
+Existing guidelines and cautions should be incorporated into any LRP analysis using percentile benchmarks. We followed guidelines from @holtEvaluatingBenchmarksBiological2018 and did not use percentile benchmarks for CUs with low productivity and high exploitation rate (Tables \@ref(tab:CU-summary), \@ref(tab:holt-tab6)). In their simulation study, percentile-based benchmarks overestimated status with harvest rates >40% and $\alpha$ <4, or harvest rates 20-40% and $\alpha$ <2.5. In these cases of low productivity and high harvest rates, more exploration could be done on alternative benchmarks. These could include benchmarks based on Traditional Ecological Knowledge, habitat availability, or other information. If productivity and/or harvest is unknown, low contrast in escapement time-series could be indicators of cases where percentile benchmarks may not be appropriate [@holtEvaluatingBenchmarksBiological2018]. We also note that cases with identical lower and upper benchmarks carry the risk of moving immediately from green to red status with time in the amber status zone (North East Vancouver Island, Upper Knight, Loughborough; Table \@ref(tab"CU-summary")). CUs with shorter time series also have the risk of unreliable percentile benchmarks. Those using percentile benchmarks should also consider whether they are calculated using a percentile of spawning escapement or total recruits including harvest. In the case where percentile benchmarks are used in the Salmon Scanner, if they are within the recommended guidelines, using them is preferred over relying solely on trends to assess CU status. Confidence intervals for percentile benchmarks can also be bootstrapped if desired [Peacock 2020, Holt et al. 2018]. <!--CH: add refs to zotero-->
 
 
 Previous evaluations of ISC Chum population status used a 25% benchmark [@hilbornBritishColumbiaChum2012]. This was based on previous work by the Alaska Department of Fish and Game that defined four tiers of populations based on contrast in spawner abundances, harvest rate, and precision of escapement data [@bueEscapementGoalReview2001; @otisEscapementGoalsSalmon2004]. The goal of these tiers was to choose a Sustainable Escapement Goal (SEG; an upper and lower percentile) to use as a goal for escapement to represent a proxy for keeping escapement within a range that includes S\textsubscript{MSY} [@clarkEvaluationPercentileApproach2014]. These SEGs were calculated for each major river/system and are still done that way in Alaska [@mckinleyReviewSalmonEscapement2020]. Tier 1 of this method was for high escapement contrast and at least moderate harvest rate, with a SEG of 25th to 75th percentiles. @bueEscapementGoalReview2001 assessed this method on 11 populations of sockeye salmon and Chinook salmon from Upper Cook Inlet and Bristol Bay. @clarkEvaluationPercentileApproach2014 tested the suitability of this 4 tier percentile approach with theoretical, simulation, and meta-analysis methods using 76 stock-recruitment data sets from Alaska covering all 5 species fo Pacific salmon. They recommended a revised 3 tier system, which changed the Tier 1 lower percentile to 20%. Moving to British Columbia, @hilbornBritishColumbiaChum2012 adopted the previous 25% lower limit of SEG as a benchmark for evaluating the status of Inside South Coast Chum in BC for the purpose of certification with the Marine Stewardship Council [@hilbornBritishColumbiaChum2012], despite its lack of testing for populations of chum salmon in British Columbia. Further, SEGs were and still are applied to individual rivers in Alaska, compared to the application of this method to entire CUs by @hilbornBritishColumbiaChum2012, @holtEvaluatingBenchmarksBiological2018, and this study. ISC chum includes 296 streams among the seven CUs, with 126 in Strait of Georgia alone. Aggregating spawners and recruits across many rivers before estimating benchmarks comes with limitations. CU level benchmarks may still allow the loss of some less productive sub-population components within the CU as changes in the productivity in individual rivers is ignored. Spawner abundance at CU level may not be a good predictor of status of individual rivers compared to SEGs at the river scale, depending on the contrast in size between rivers and the correlation (or lack thereof) in escapement and/or productivity. This is especially a risk in this case study because the data is infilled assuming correlation in spawning escapement within CUs. This approach ignores the portfolio effect, whereby stock aggregates gain stability from the asynchrony of their component rivers [@brennanShiftingHabitatMosaics2019; @davisEffectsVariabilitySynchrony2021; @mooreConservationRisksPortfolio2021]. Where enhanced spawners cannot be removed from data sets, this introduces the risk of inflating wild spawner numbers and overly optimistic status assessments. We removed three systems of highly enhanced chum (Qualicum, Little Qualicum, and Puntledge) before infilling stream escapements.
