--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -17,7 +17,7 @@ The reliability of proportion-based LRP estimates depends on the reliability of 
 The decision on which structural form or type of benchmark to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. The challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and <!--CW remove: aggregate abundance-based LRPs,--><!--CW add: using--> ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
 
 
-In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I add in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review). We recommend that CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
+In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I add in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt *et al.* (in review). We recommend that CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
 
 ### Logistic regression-based LRPs
 
