--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -59,7 +59,7 @@ Interior Fraser Coho show a strong positive relationship between their spatial d
 
 ### Similarity Among CUs
 
-We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) habitat capacity.  
+We considered the 4 criteria identified in Holt *et al.* (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) habitat capacity.  
 
 In an assessment of threats for Interior Fraser Coho completed as part of the 2018 Recovery Potential Assessment, @arbeiderInteriorFraserCoho2020 ranked a comprehensive set of threats as on a scale of high, medium, low, and unknown.  The highest ranking threat was modification to catchment surfaces, which was ranked as medium-high.  Examples of threats within this category included the removal of forest and vegetation and the creation of impervious surfaces resulting in modified hydrological regimes, while activities contributing to the modification of catchment surfaces included forestry, forest fires, agriculture, and urban and rural development.  The threat of effluents from agriculture and forestry, as well as the threat of linear development (i.e., the straightening and channelization of streams associated with agriculture and urban / rural development), were also ranked relatively high at medium risk. Forestry, agriculture, and linear development are widespread throughout the interior Fraser River watershed, with all CUs impacted by one or more of these [@arbeiderInteriorFraserCoho2020]. The Fraser Canyon, South Thompson, and Lower Thompson CUs have experienced the highest historic and ongoing forestry impacts, however, the Middle Fraser CU has had increased forestry in recent years due to pine beetle infestations. The three Thompson River CUs (North, South, and Lower Thompson) are most impacted by agricultural activities [@arbeiderInteriorFraserCoho2020], while linear development impacts are highest within the Middle Fraser and North Thompson CUs.  Development pressures linked to recreational use impact habitats within the South Thompson CU [@arbeiderInteriorFraserCoho2020]. Thus, while impacts from a given activity may be higher in some CUs that others, all CUs are vulnerable to these threats from one activity or another.  The interconnected threats stemming from any one activity, as well as cumulative impacts, mean that it is hard to isolate one CUs that experiences threats differently than another.  Furthermore,  extensive agricultural and linear development in the lower Fraser River, which all Interior Fraser Coho smolts migrate through, and a proportion of juveniles rear in, means that there is a possibility that all CUs are affected by threats stemming from agriculture and linear development.
 
@@ -88,7 +88,7 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) Pacific Salmon Status Scanner, 2) CU-level abundance relative to S\textsubscript{gen} as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT.
 
-The first approach, which uses the Pacific Salmon Status Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status when using the proportional LRP approach. The other two approaches are primarily used to develop aggregate abundance-based LRPs in this case study, as well as for a point of comparison with Pacific Salmon Status Scanner tool.
+The first approach, which uses the Pacific Salmon Status Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt *et al.* (in review) as the method that should be used to estimate CU status when using the proportional LRP approach. The other two approaches are primarily used to develop aggregate abundance-based LRPs in this case study, as well as for a point of comparison with Pacific Salmon Status Scanner tool.
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S\textsubscript{gen}, where CU status is considered poor when abundance drops below S\textsubscript{gen}. The value of S\textsubscript{gen} represents the number of spawners required to recover to S\textsubscript{MSY} (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S\textsubscript{gen} is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
 
@@ -454,7 +454,7 @@ Projection model outputs were used to estimate projection-based LRPs using the m
 
 ***Stock recruitment dynamics***  
 
-Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using tmbStan (Kristensen 2019), which is an R package that allows MCMC samples to be drawn from a TMB model object using rStan (Guo et al. 2020). Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of Rhat and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
+Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using tmbStan (Kristensen 2019), which is an R package that allows MCMC samples to be drawn from a TMB model object using rStan (Guo et al. 2020)<!--CH add to zotero-->. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of Rhat and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
 
 The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock recruit models by combining projections prior to calculating a projection-based LRP. Additional sensitivity analyses described below were only done using the base Ricker model.  
 
@@ -623,7 +623,7 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above 'poor' CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the Pacific Salmon Status Scanner in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on S\textsubscript{gen} estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S\textsubscript{gen} from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
-We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the Pacific Salmon Status Scanner should be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
+We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt *et al.* (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the Pacific Salmon Status Scanner should be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
@@ -697,7 +697,7 @@ For example, when estimates of Sgen were obtained using the base Ricker model, p
 
 <!--
 KH (Nov 9): Is it ok to take out the following point since we have now explored it in the coho case study?  Or, is it worth including some of the following points still in the discussion??
-- Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt et al. in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs. -->
+- Note that we also could have looked at logistic regression-based LRPs in which historical CU status was estimated based on the multi-dimensional decision tool rather than status relative to Sgen. This would have allowed for an evaluation of the relationship between multi-dimensional status and aggregate abundance for Interior Fraser Coho, which would have be useful given the recommendation to use multidimensional status estimates to characterize CU status for proportional LRPs (Holt *et al.* in review). Future work to support implementation of aggregate abundance-based LRPs should consider this approach when evaluating whether there is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above red status in order to support the development of aggregate-abundance based LRPs. -->
 <!--CH: One challenge in applying statuses based on the Multidimenstional Tool to development of aggregate-abundance based LRPs is that the component metrics in the Tool includes short and long-term trends which are independent of aggregate status. This misalignment of underlying metrics will increase uncertainty in aggregate-abundance based LRPs developed from Multidimensional status, and may not be suitable-->
 
 
